[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atm_controller_Lewis"
version = "0.0.1"
authors = [
    { name="Lewis Kim", email="hubert8663@gmail.com" },
]
description = "Bear Robotics article task"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ykim5470/atmcontroller"